Added HTML main text content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,38 @@
     <title>Secret Agent Supply Inc.</title>
   </head>
   <body>
-
+    <header>
+      <div class="headerlogo">
+    SECRET AGENT SUPPLY INC.
+      </div>
+      <div class="newarrival">
+    <h1>NEW ARRIVAL</h1>
+    <h1>SPORT BIKES AND MOTORCYCLES</h1>
+      </div>
+      <div class="navigation">
+        <nav>
+          <span>Eyewear</span>
+          <span>Apparel</span>
+          <span>Gadgets</span>
+          <span>Vehicles</span>
+          <span>Classes</span>
+          <span>Contact</span>
+        </nav>
+      </div>
+    </header>
+    <div class="flexbox1">
+      <span>Exploding Pen</span>
+      <span>Cellular Watch</span>
+      <span>Thermal Glasses</span>
+    </div>
+    <div class="flexbox2">
+      <span>Location</span>
+      <p>-47.346436, 84.32354</p>
+      <span>Hours</span>
+      <p>0800 - 1800</p>
+    </div>
+    <footer>
+      <p>Copyright Secret Agent Supply Inc.</p>
+    </footer>
   </body>
 </html>
