--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <body>
     <header>
       <div class="headerlogo">
-    SECRET AGENT SUPPLY INC.
+        <img src="resources/logo.png" alt="spyglasses">
+        <h1>SECRET AGENT SUPPLY INC.</h1>
       </div>
-      <div class="newarrival">
+      <div class="flexbox newarrival">
     <h1>NEW ARRIVAL</h1>
     <h1>SPORT BIKES AND MOTORCYCLES</h1>
       </div>
@@ -25,16 +26,26 @@
         </nav>
       </div>
     </header>
-    <div class="flexbox1">
-      <span>Exploding Pen</span>
-      <span>Cellular Watch</span>
-      <span>Thermal Glasses</span>
+    <div class="flexbox stock">
+      <div class="item">
+        <span>Exploding Pen</span>
+      </div>
+      <div class="item">
+        <span>Cellular Watch</span>
+      </div>
+      <div class="item">
+        <span>Thermal Glasses</span>
+      </div>
     </div>
-    <div class="flexbox2">
-      <span>Location</span>
-      <p>-47.346436, 84.32354</p>
-      <span>Hours</span>
-      <p>0800 - 1800</p>
+    <div class="flexbox locations">
+      <div class="location">
+        <span>Location</span>
+          <p>-47.346436, 84.32354</p>
+      </div>
+      <div class="hours">
+        <span>Hours</span>
+        <p>0800 - 1800</p>
+      </div>
     </div>
     <footer>
       <p>Copyright Secret Agent Supply Inc.</p>
