CSS is more or less completed until navigation

--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
   </head>
   <body>
     <header>
-      <div class="headerlogo">
+      <div class="flexbox headerlogo">
         <img src="resources/logo.png" alt="spyglasses">
         <h1>SECRET AGENT SUPPLY INC.</h1>
       </div>
-      <div class="flexbox newarrival">
-    <h1>NEW ARRIVAL</h1>
-    <h1>SPORT BIKES AND MOTORCYCLES</h1>
+      <div class="flexbox banner">
+        <div class="newarrival">
+          <h2>NEW ARRIVAL</h2>
+          <h1>SPORT BIKES AND<br /> MOTORCYCLES</h1>
+        </div>
       </div>
-      <div class="navigation">
-        <nav>
-          <span>Eyewear</span>
-          <span>Apparel</span>
-          <span>Gadgets</span>
-          <span>Vehicles</span>
-          <span>Classes</span>
-          <span>Contact</span>
+        <nav class="flexbox">
+          <span><a href="#eyewear">Eyewear</a></span>
+          <span><a href="#apparel">Apparel</a></span>
+          <span><a href="#gadgets">Gadgets</a></span>
+          <span><a href="#vehicles">Vehicles</a></span>
+          <span><a href="#classes">Classes</a></span>
+          <span><a href="#contact">Contact</a></span>
         </nav>
       </div>
     </header>
@@ -40,7 +41,7 @@
     <div class="flexbox locations">
       <div class="location">
         <span>Location</span>
-          <p>-47.346436, 84.32354</p>
+        <p>-47.346436, 84.32354</p>
       </div>
       <div class="hours">
         <span>Hours</span>
