--- a/index.html
+++ b/index.html
@@ -6,46 +6,66 @@
     <title>Secret Agent Supply Inc.</title>
   </head>
   <body>
-    <header>
-      <div class="flexbox headerlogo">
+<!-- Header for the logo and company-->
+    <div class="company">
+      <div class="container">
         <img src="resources/logo.png" alt="spyglasses">
-        <h1>SECRET AGENT SUPPLY INC.</h1>
-      </div>
-      <div class="flexbox banner">
-        <div class="newarrival">
-          <h2>NEW ARRIVAL</h2>
-          <h1>SPORT BIKES AND<br /> MOTORCYCLES</h1>
-        </div>
-      </div>
-        <nav class="flexbox">
-          <span><a href="#eyewear">Eyewear</a></span>
-          <span><a href="#apparel">Apparel</a></span>
-          <span><a href="#gadgets">Gadgets</a></span>
-          <span><a href="#vehicles">Vehicles</a></span>
-          <span><a href="#classes">Classes</a></span>
-          <span><a href="#contact">Contact</a></span>
-        </nav>
-      </div>
-    </header>
-    <div class="flexbox stock">
-      <div class="item">
-        <span>Exploding Pen</span>
-      </div>
-      <div class="item">
-        <span>Cellular Watch</span>
-      </div>
-      <div class="item">
-        <span>Thermal Glasses</span>
+        <span>SECRET AGENT SUPPLY INC.</span>
       </div>
     </div>
-    <div class="flexbox locations">
-      <div class="location">
-        <span>Location</span>
-        <p>-47.346436, 84.32354</p>
+<!-- Main banner -->
+    <div class="main-banner">
+      <div class="container">
+        <div class="newarrival">
+          <h4>NEW ARRIVAL</h4>
+          <h1>SPORT BIKES AND MOTORCYCLES</h1>
+        </div>
       </div>
-      <div class="hours">
-        <span>Hours</span>
-        <p>0800 - 1800</p>
+    </div>
+<!--Navigation-->
+    <nav>
+      <ul class="container">
+        <li><a href="#eyewear">Eyewear</a></li>
+        <li><a href="#apparel">Apparel</a></li>
+        <li><a href="#gadgets">Gadgets</a></li>
+        <li><a href="#vehicles">Vehicles</a></li>
+        <li><a href="#classes">Classes</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+<!-- Product and Business info-->
+    <div class="container">
+      <div class="products">
+        <div class="product">
+          <div class="product-image">
+            <img src="resources/pen.png">
+          </div>
+          <span class="description">Exploding Pen</span>
+        </div>
+        <div class="product watch">
+          <div class="product-image">
+            <img src="resources/watch.png">
+          </div>
+          <span class="description">Cellular Watch</span>
+        </div>
+        <div class="product glasses">
+          <div class="product-image">
+            <img src="resources/glasses.png">
+          </div>
+          <span class="description">Thermal Glasses</span>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="flexbox locations">
+        <div class="location">
+          <span>Location</span>
+          <p>-47.346436, 84.32354</p>
+        </div>
+        <div class="hours">
+          <span>Hours</span>
+          <p>0800 - 1800</p>
+        </div>
       </div>
     </div>
     <footer>
