--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <li><a href="#classes">Classes</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
+      <ul class="mobile-nav">
+        <li><a href="#menu">Menu</a></li>
+      </ul>
     </nav>
 <!-- Product and Business info-->
     <div class="container">
@@ -57,19 +60,21 @@
       </div>
     </div>
     <div class="container">
-      <div class="flexbox locations">
-        <div class="location">
-          <span>Location</span>
+      <div class="business-info">
+        <div class="info">
+          <span class="title">Location</span>
           <p>-47.346436, 84.32354</p>
         </div>
-        <div class="hours">
-          <span>Hours</span>
+        <div class="info">
+          <span class="title">Hours</span>
           <p>0800 - 1800</p>
         </div>
       </div>
     </div>
     <footer>
-      <p>Copyright Secret Agent Supply Inc.</p>
+      <div class="container">
+        <p>Copyright Secret Agent Supply Inc.</p>
+      </div>
     </footer>
   </body>
 </html>
